# CodeDoggy

./: .gitignore  README.md  SCHEME.md  pyproject.toml  pytest_out.txt
docs/: grok-source-fidelity.md  grok-source-map.md  grok-tool-surface.md  hermes-groke-seam.md  hermes-memory-fidelity.md  host-tool-extra.md  release-boundaries.md  tool-checklist.md  tool-design.md
scripts/: stress_live_session.py
src/codedoggy/: __init__.py  attachments.py  bootstrap.py  cli.py
src/codedoggy/audit/: __init__.py  auditor.py  format.py  hooks.py  memory_select.py  model_auditor.py  restore.py  services.py  trajectory.py  types.py
src/codedoggy/context/: __init__.py  budget.py  compactor.py  live_history.py  memory_flush.py  mode.py  prefire.py  pruning.py  rewind.py  segments.py  select.py  suppress.py  tokens.py
src/codedoggy/graph/: __init__.py  builder.py  cache.py  handle.py  index.py  index_manager.py  navigation.py  runtime.py  types.py  watcher.py
src/codedoggy/host/: __init__.py  ask_user_cli.py  memory_backend.py  scheduler_runtime.py  scheduler_tick.py
src/codedoggy/mcp/: __init__.py  config.py  dispatcher.py  events.py  oauth.py  restart.py  runtime.py  servers.py  watcher.py
src/codedoggy/memory/: __init__.py  _plugin_discovery.py  context_fence.py  daemon_pool.py  defaults.py  hermes_seam.py  hermes_select.py  manager.py  paths.py  prefetch.py  provider.py  providers_extra.py  redact.py  scan.py  select_types.py  session_store.py  store.py  tool_injection.py
src/codedoggy/model/: __init__.py  anthropic_hygiene.py  anthropic_messages.py  bedrock.py  builtin_profiles.py  catalog.py  chat_sampler.py  errors.py  (+20 more)
tests/: __init__.py  test_activity.py  test_apply_patch_parser.py  test_ask_user_cli.py  test_ask_user_question.py  test_audit.py  test_audit_p0.py  test_auth_and_transports.py  test_background_tasks.py  test_bash_bg_op.py  test_batch_parallel.py  test_bm25_tool_index.py  test_bootstrap.py  test_clipboard_image.py  test_codex_responses.py  test_connection.py  test_context.py  test_context_limits.py  test_defaults_and_common_tools.py  test_graph.py  test_grok_fidelity.py  test_grok_system_prompt.py  test_hermes_fence.py  test_hermes_memory_align.py  test_hermes_memory_store.py  test_hermes_plugins_session.py  test_hermes_pre_compress.py  test_hermes_seam.py  test_host_wiring.py  test_image_gen.py  test_incomplete_work.py  test_kernel_audit_fixes.py  test_login_wizard.py  test_mcp_runtime.py  test_memory.py  test_memory_backend.py  test_model.py  test_model_providers.py  test_open_path.py  test_orchestration.py  (+44 more)
(+201 files in other folders)
