[project]
name = "codedoggy"
version = "0.1.0"
description = "Doggy — coding agent harness (package: codedoggy)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prompt-toolkit>=3.0.52,<4",
    "pyyaml>=6.0",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "watchdog>=4.0",
  "mcp>=1.28,<1.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
# Install once → type `doggy`
doggy = "codedoggy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codedoggy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: hits local network services (e.g. Ollama)",
]
